--- a/WebContent/kikiMain.html
+++ b/WebContent/kikiMain.html
@@ -46,7 +46,7 @@
 				<h2>Admin page</h2>
 			</header>
 			<form name=board method=post
-				action="/MemoServer/jsp/DeleteAccount.jsp">
+				action="/jsp/DeleteAccount.jsp">
 				<footer>
 					<input type=button value="로그아웃" OnClick="javascript:logout();">
 				</footer>
