--- a/WebContent/kikiMain.html
+++ b/WebContent/kikiMain.html
@@ -56,7 +56,7 @@
 		<!-- Nav -->
 		<nav id="nav">
 			<ul>
-				<li><a href="/MemoServer">Home</a></li>
+				<li><a href="/">Home</a></li>
 				<li><a href="#">사용자 관리</a>
 					<ul>
 						<li><a href="jsp/UserList.jsp">사용자관리 </a></li>
