--- a/WebContent/guestMain.html
+++ b/WebContent/guestMain.html
@@ -46,7 +46,7 @@
 				<h2>Admin page</h2>
 			</header>
 			<form name=board method=post
-				action="/MemoServer/jsp/DeleteAccount.jsp">
+				action="/jsp/DeleteAccount.jsp">
 				<footer>
 					<input type=button value="로그아웃" OnClick="javascript:logout();">
 				</footer>
@@ -56,7 +56,7 @@
 		<!-- Nav -->
 		<nav id="nav">
 			<ul>
-				<li><a href="/MemoServer">Home</a></li>
+				<li><a href="/">Home</a></li>
 				<li><a href="#">목록</a>
 					<ul>
 						<li><a href="jsp/UpdateAppList.jsp">공지 목록</a></li>
